--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.app {
+    background-color: rgb(255, 255, 255);
+}
+
+.nav {
+    width: 100%;
+    padding: .75rem;
+    background-color: transparent;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+
+    position: sticky;
+    /* margin: 2rem; */
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+    max-width: 10rem;
+    min-width: 6rem;
+    max-height: 2.5rem;
+    background-color: transparent;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo-svg {
+    height: 94%;
+    width: 94%;
+    background-color: transparent;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.search-bar {
+    display: flex;
+    gap: .55rem;
+    align-items: center;
+    border-radius: .49rem;
+    padding: .55rem;
+
+    height: 3.5rem;
+    max-width: 35rem;
+    min-width: 9rem;
+    width: 100%;
 }
 
-.card {
-  padding: 2em;
+.search {
+    border: transparent solid 0rem;
+    outline: none;
+    width: 100%;
+    font-size: 1.2rem;
 }
 
-.read-the-docs {
-  color: #888;
-}
