--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -12,4 +12,5 @@
   padding: o;
   box-sizing: border-box;
   background-color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
 }
