--- a/src/navBar/Menu.css
+++ b/src/navBar/Menu.css
@@ -1,41 +1,31 @@
 .menu-dd {
     display: grid;
     text-align: center;
-    gap: .7rem;
-    min-width: 48;
 
-    padding: .7rem 0rem;
-    margin: .4rem;
     background-color: rgb(255, 255, 255);
     border-radius: .4rem;
     box-shadow: 1px 1px 7px 4px #d5ddfc;
     font-size: 1.2rem;
 
     position: absolute;
-    top: 1.6rem;
-    left: -7.4rem;
-    /* z-index: 100; */
+    top: 2.6rem;
+    left: -6.4rem;
 }
-
 
 .theme {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: .6rem;
-    width: 9rem;
+    /* width: 9rem; */
 
     font-size: 1.2rem;
     border: transparent;
-    padding: 0.29rem 1.4rem;
+    padding: .6rem 1.4rem;
 }
 
 .theme:hover {
     background-color: rgb(236, 236, 252);
-}
-
-.dark {
-    fill: black;
 }
 
 .theme-out {
@@ -49,5 +39,10 @@
 
 .dot {
     position: absolute;
-    transition: 290ms ease-in-out;
+    transition: 90ms ease-in-out;
+}
+
+.N{
+    padding: .6rem 1.4rem;
+
 }
