--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,7 @@
 
 * {
   margin: 0;
-  padding: o;
+  padding: 0;
   box-sizing: border-box;
-
-  background-color: whitesmoke;
-
   font-family: Arial, Helvetica, sans-serif;
 }
