--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -4,20 +4,21 @@
     background-color: rgb(0, 104, 230);
     color: white;
     display: grid;
-    padding: 1rem 0 0 0;
+    padding: .6rem 0 0 0;
 }
 
 .footer-details {
     display: flex;
-    gap: 4rem;
+    flex-wrap: nowrap;
+    gap: .6rem;
     justify-content: space-around;
-    padding: 1rem;
+    padding: .7rem;
 }
 
 .footer-bottom {
     display: flex;
     justify-content: space-evenly;
-    padding: 1rem;
+    padding: .79rem;
     background-color: rgb(1, 1, 145);
     color: white;
 }
@@ -30,4 +31,25 @@ li {
 li:hover,
 p:hover {
     text-decoration: underline;
+}
+
+@media screen and (max-width:160rem) {
+    .footer-con {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width:48rem) {
+    .footer-con {
+        font-size: .7rem;
+    }
+}
+
+@media screen and (max-width:30rem) {
+    .footer-con {
+        font-size: .49rem;
+    }
+    .footer-details {
+        flex-wrap: wrap;
+    }
 }
