--- a/src/navBar/Navbar.css
+++ b/src/navBar/Navbar.css
@@ -1,27 +1,193 @@
-.nav {
-    width: 100%;
+@media screen and (max-width:160rem) {
+    .nav {
+        padding: .7rem 1rem .7rem 1rem;
+        background-color: rgb(255, 255, 255);
+        gap: 1.2rem;
+        width: 100%;
+    }
 
-    min-width: 24rem;
-    padding: .7rem 1rem .7rem 1rem;
-    background-color: white;
+    .logo {
+        max-width: 10rem;
+        min-width: 9rem;
+        max-height: 2.5rem;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
+    .search-bar {
+        max-width: 35rem;
+        min-width: 14rem;
+        height: 3rem;
+    }
+
+    .search-bar .search {
+        font-size: 1.4rem;
+    }
+
+    .login-info {
+        width: 7rem;
+        gap: .4rem;
+        font-size: 1.1rem;
+    }
+
+    .cart-icon,
+    .search-icon {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .cart-no {
+        width: 1.4rem;
+        height: 1.4rem;
+        margin-left: 1.4rem;
+        line-height: 150%;
+        -webkit-text-stroke-width: .9px;
+    }
+
+    .wallet {
+        font-size: 1.4rem;
+    }
+
+    .wallet-icon {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .menu {
+        width: 2.9rem;
+        height: 2.6rem;
+    }
+
+    .menu-logo {
+        width: 2.9rem;
+        height: 2.6rem;
+    }
+}
+
+@media screen and (max-width:48rem) {
+    .nav {
+        padding: .7rem 1rem .7rem 1rem;
+        background-color: rgb(255, 255, 255);
+        gap: .7rem;
+        height: 2.9rem;
+        width: 100%;
+    }
+
+    .logo {
+        max-width: 6rem;
+        min-width: 4rem;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
+    .logo * {
+        min-width: 2rem;
+    }
+
+    .search-bar {
+        max-width: 13rem;
+        min-width: 7rem;
+        height: 129%;
+    }
+
+    .login-info {
+        width: fit-content;
+        gap: .1rem;
+    }
+
+    .login-info .arrow-svg {
+        display: none;
+    }
+
+    .login-info p {
+        display: none;
+    }
+
+    .search-bar .search {
+        font-size: .79rem;
+    }
+
+    .cart-icon,
+    .search-icon {
+        width: 1.4rem;
+        height: 1.4rem;
+    }
+
+    .cart-no {
+        width: 1.2rem;
+        height: 1.2rem;
+        margin-left: 1rem;
+        line-height: 140%;
+        -webkit-text-stroke-width: .29px;
+    }
+
+    .wallet {
+        font-size: 1rem;
+    }
+
+    .wallet-icon {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
+
+    .menu {
+        width: 1.7rem;
+        height: 1.6rem;
+    }
+
+    .menu-logo {
+        width: 1.6rem;
+        height: 1.6rem;
+    }
+}
+
+@media screen and (max-width:30rem) {
+    .nav {
+        padding: .6rem .7rem .6rem .7rem;
+        background-color: rgb(255, 255, 255);
+        gap: .6rem;
+        min-width: 20rem;
+        width: 100%;
+        flex-wrap: wrap;
+        flex-direction: row;
+        height: auto;
+    }
+
+    .search-bar {
+        background-color: white;
+        max-width: 26rem;
+        min-width: 7rem;
+        height: 79%;
+    }
+
+    .search-bar {
+        order: 2;
+        flex: 1 1 100%;
+    }
+
+    .logo {
+        order: -1;
+        flex: 1 1 100%;
+    }
+    
+    .menu,
+    .login-all,
+    .cart,
+    .wallet {
+        order: 1;
+    }
+}
+
+/* css */
+.nav {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    gap: 1.2rem;
     font-size: 1.2rem;
-
+    align-items: center;
     position: fixed;
     z-index: 9999;
     top: 0;
     left: 0;
-}
-
-.logo {
-    max-width: 10rem;
-    min-width: 6rem;
-    max-height: 2.5rem;
-    background-color: transparent;
-    cursor: pointer;
 }
 
 .logo-svg {
@@ -37,39 +203,37 @@
 
 .search-bar {
     display: flex;
-    gap: .55rem;
+    gap: .29rem;
     align-items: center;
+    justify-content: space-evenly;
     border-radius: .49rem;
-    padding: .55rem;
-
-    height: 3rem;
-    max-width: 35rem;
-    min-width: 9rem;
+    padding: .1rem .29rem;
     width: 100%;
     cursor: pointer;
+    border: 1px solid rgb(73, 73, 255);
 }
 
-.search {
-    border: transparent solid 0rem;
+.search-bar svg {
+    width: 100%;
+}
+
+.search-bar .search {
+    border: transparent solid .1rem;
     outline: none;
     width: 100%;
-    font-size: 1.2rem;
+    height: 90%;
 }
 
 .login-info {
-    padding: 0rem .2rem;
-    width: 8rem;
-    height: 3.1rem;
-
+    padding: 0.1rem .2rem;
+    padding: 6% 0;
     background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    gap: .4rem;
     border-radius: .49rem;
     cursor: pointer;
     border-color: transparent;
-    font-size: 1.2rem;
     transition: 200ms ease-in-out;
     position: relative;
 }
@@ -84,13 +248,11 @@
     background-color: rgb(41, 41, 227);
     transition: 200ms ease-in-out;
     box-shadow: 1px 1px 7px 4px #d5ddfc;
-
 }
 
 .login-info:hover * {
     color: white;
     fill: white;
-    /* transform: scale(1.10); */
 }
 
 .login-info:hover .arrow {
@@ -105,8 +267,6 @@
 
 .cart-icon,
 .search-icon {
-    width: 2rem;
-    height: 2rem;
     fill: blue;
     padding: 0rem;
     border: 0rem;
@@ -129,20 +289,13 @@
 }
 
 .cart-no {
-    padding: .17rem;
+    text-align: center;
     position: absolute;
-    width: 1.4rem;
-    height: 1.4rem;
-    margin-left: 1.4rem;
-
     background-color: white;
     border: blue 1px solid;
-
     border-radius: 7px;
-
     color: rgb(255, 0, 0);
     text-align: center;
-    -webkit-text-stroke-width: .9px;
     -webkit-text-stroke-color: red;
 }
 
@@ -152,11 +305,9 @@
     gap: .2rem;
     padding: 0rem;
     border: 0rem;
-    /* width: 6rem; */
     background-color: transparent;
     cursor: pointer;
-    /* color: blue; */
-    font-size: 1.4rem;
+
     position: relative;
 }
 
@@ -178,14 +329,7 @@
     border-radius: .4rem;
 }
 
-.wallet-icon {
-    width: 2rem;
-    height: 2rem;
-}
-
 .menu {
-    width: 2.9rem;
-    height: 2.6rem;
     fill: blue;
     padding: 0rem;
     margin: 0rem;
